modal even more scalable on mobile + some 3D fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -153,7 +153,7 @@
     background-color: white;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 1);
     width: 400px; /* Adjust the width as needed */
-    max-width: 900px; /* Adjust the width as needed */
+    max-width: 500px; /* Adjust the width as needed */
     padding: 20px;
     flex-direction: column;
   }
